--- a/athena-vertica/pom.xml
+++ b/athena-vertica/pom.xml
@@ -82,6 +82,12 @@
             <version>2022.47.1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
+            <version>4.11.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
